[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numeric_pddl_gym"
version = "1.0.0"
dependencies = [
  "gymnasium~=1.2.1",
  "pddl-plus-parser==3.17.0",
  "dm-tree==0.1.9",
  "sympy==1.14.0",
  "anytree==2.13.0",
  "networkx==3.5",
  "dm-tree==0.1.9",
  "scipy==1.16.3"
]

[project.optional-dependencies]
rl_agents = [
  "ray[tune]==2.50.1",
  "torch==2.9.0",
  "lz4"
]

[tool.hatch.build.targets.wheel]
packages = ["numeric_pddl_gym", "rl_agents"]