[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numeric-pddl-gym"
version = "1.1.0"
description = "Convert a Numeric PDDL domain into an Gymnasium environment"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yarin Benyamin" }
]
license = { text = "Apache-2.0" }
keywords = ["pddl", "gym", "reinforcement-learning", "planning", "pddl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/SPL-BGU/NumericPDDLGym" }
dependencies = [
  "gymnasium~=1.2.1",
  "pddl-plus-parser==3.17.0",
  "dm-tree==0.1.9",
  "sympy==1.14.0",
  "anytree==2.13.0",
  "networkx==3.5",
  "scipy==1.16.3"
]

[project.optional-dependencies]
rl_agents = [
  "ray[tune]==2.50.1",
  "torch==2.9.0",
  "lz4"
]

[tool.hatch.build.targets.wheel]
packages = ["numeric_pddl_gym", "rl_agents"]